<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:forceDarkAllowed="true"
    android:theme="@android:style/Theme.Light.NoTitleBar"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/title"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/museo"
        android:text="@string/title"
        android:textColor="#373A37"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dial_Image"
        android:layout_width="366dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/rectangle_2" />

    <TextView
        android:id="@+id/background_of_the_dial"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:fontFamily="@font/digitalnumbers"
        android:text="@string/background_of_the_dial"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#19373A37"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/dial_Image"
        app:layout_constraintEnd_toEndOf="@+id/dial_Image"
        app:layout_constraintStart_toStartOf="@+id/dial_Image"
        app:layout_constraintTop_toTopOf="@+id/dial_Image" />

    <TextView
        android:id="@+id/dial"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:fontFamily="@font/digitalnumbers"
        android:textColor="#373A37"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/dial_Image"
        app:layout_constraintEnd_toEndOf="@+id/dial_Image"
        app:layout_constraintStart_toStartOf="@+id/dial_Image"
        app:layout_constraintTop_toTopOf="@+id/dial_Image" />

    <Button
        android:id="@+id/zero"
        android:layout_width="175dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/zero"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />


    <Button
        android:id="@+id/one"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/one"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/two"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/two"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/three"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/three"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/four"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/four"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/five"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/five"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/seven" />


    <Button
        android:id="@+id/six"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/six"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/seven"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/seven"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_all" />


    <Button
        android:id="@+id/eight"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/eight"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/changing_the_sign" />


    <Button
        android:id="@+id/nine"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/nine"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/percent" />


    <Button
        android:id="@+id/delete_all"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/delete_all"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dial_Image" />


    <Button
        android:id="@+id/changing_the_sign"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/changing_the_sign"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toEndOf="@+id/delete_all"
        app:layout_constraintTop_toBottomOf="@+id/dial_Image" />

    <Button
        android:id="@+id/percent"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/percent"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toEndOf="@+id/changing_the_sign"
        app:layout_constraintTop_toBottomOf="@+id/dial_Image" />


    <Button
        android:id="@+id/divide"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/divide"
        android:textColor="#FFFFFF"
        android:textSize="43sp"
        android:translationZ="5dp"
        app:backgroundTint="#3A4E89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/dial_Image" />


    <Button
        android:id="@+id/multiply"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/multiply"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#3A4E89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/divide" />


    <Button
        android:id="@+id/minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/minus"
        android:textColor="#FFFFFF"
        android:textSize="43sp"
        android:translationZ="5dp"
        app:backgroundTint="#3A4E89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />


    <Button
        android:id="@+id/plus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/plus"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#3A4E89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/minus" />


    <Button
        android:id="@+id/equal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/equal"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#3A4E89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/comma"
        app:layout_constraintTop_toBottomOf="@+id/plus" />


    <Button
        android:id="@+id/comma"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:elevation="5dp"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/comma"
        android:textColor="#3A4E89"
        android:textSize="29sp"
        android:translationZ="5dp"
        app:backgroundTint="#F1F3F6"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/one" />

</androidx.constraintlayout.widget.ConstraintLayout>